--- a/TeamsApiBot/appsettings.json
+++ b/TeamsApiBot/appsettings.json
@@ -8,10 +8,10 @@
   },
   "AllowedHosts": "*",
   "ClientSettings": {
-    "ClientId": "5ff556c4-d3b8-4b19-b6b5-bc2de2e37d9d",
-    "ClientSecret": "4846mFCqP2hSTp4il2.P~_6y8ud9EtbWP~",
+    "ClientId": "",
+    "ClientSecret": "",
     "CertificateUrl": "http://localhost:5000/redirect"
   },
-  "TelegramBotToken": "1947095454:AAG5-cwWk1z3kVPJybUQK5qB0W-o6MZaiUI",
-  "TelegramBotNotifyGroup": "@TeamsChatNotify"
+  "TelegramBotToken": "",
+  "TelegramBotNotifyGroup": ""
 }
